ruka-lang.org/src/lib/interpreter/fixtures/type-err/behaviour-as-storage.ruka
// expect: behaviour
// Behaviour types may only appear in parameter position — not as a declaration,
// field, or return type.
let shape = behaviour {
	area(self): () -> float
}

let main = () do
	let s: shape = ()
end
